--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
+    "axios": "^1.9.0",
     "expo": "~53.0.9",
     "expo-font": "~13.3.1",
     "expo-splash-screen": "^0.30.8",
