--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,9 @@
     "esModuleInterop": true,
     "baseUrl": ".",
     "paths": {
-      "*": ["src/*"]
+      "*": [
+        "src/*"
+      ]
     }
   }
 }
